--- a/Modules/Loadable/Transforms/Widgets/Resources/qSlicerTransformsModuleWidgets.qrc
+++ b/Modules/Loadable/Transforms/Widgets/Resources/qSlicerTransformsModuleWidgets.qrc
@@ -1,7 +1,8 @@
-<!DOCTYPE RCC><RCC version="1.0">
+<RCC>
   <qresource>
-	<file>Icons/GlyphIcon.png</file>
-	<file>Icons/GridIcon.png</file>
-	<file>Icons/ContourIcon.png</file>
+    <file>Icons/CoordsIcon .png</file>
+    <file>Icons/GlyphIcon.png</file>
+    <file>Icons/GridIcon.png</file>
+    <file>Icons/ContourIcon.png</file>
   </qresource>
 </RCC>
